--- a/app/src/main/res/layout/item_type_child_3.xml
+++ b/app/src/main/res/layout/item_type_child_3.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/text_1"
+        android:id="@+id/text_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
@@ -29,7 +29,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:orientation="vertical" />
+        android:orientation="vertical">
+
+        <include layout="@layout/layout_item_type3" />
+
+    </LinearLayout>
 
 
 </LinearLayout>
