--- a/app/src/main/res/layout/activity_data_filter.xml
+++ b/app/src/main/res/layout/activity_data_filter.xml
@@ -148,6 +148,7 @@
                     android:orientation="vertical"
                     android:paddingLeft="16dp"
                     android:paddingTop="22dp"
+                    android:paddingRight="16dp"
                     android:visibility="@{viewModel.checkType == 2?View.VISIBLE:View.GONE}">
 
                     <TextView
@@ -158,143 +159,11 @@
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
-                    <LinearLayout
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recyclerView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
-                        android:orientation="horizontal"
-                        android:weightSum="4">
-
-                        <TextView
-                            android:layout_width="70dp"
-                            android:layout_height="30dp"
-                            android:gravity="center"
-                            android:onClick="buttonSelect"
-                            android:tag="0"
-                            android:text="前中"
-                            app:select_position_state="@{viewModel.position}" />
-
-                        <TextView
-                            android:layout_width="70dp"
-                            android:layout_height="30dp"
-                            android:layout_marginLeft="16dp"
-                            android:layout_marginRight="16dp"
-                            android:gravity="center"
-                            android:onClick="buttonSelect"
-                            android:tag="1"
-                            android:text="前下"
-                            app:select_position_state="@{viewModel.position}" />
-
-                        <TextView
-                            android:layout_width="70dp"
-                            android:layout_height="30dp"
-                            android:layout_marginLeft="16dp"
-                            android:layout_marginRight="16dp"
-                            android:gravity="center"
-                            android:onClick="buttonSelect"
-                            android:tag="2"
-                            android:text="左上"
-                            app:select_position_state="@{viewModel.position}" />
-
-                        <TextView
-                            android:layout_width="70dp"
-                            android:layout_height="30dp"
-                            android:gravity="center"
-                            android:onClick="buttonSelect"
-                            android:tag="3"
-                            android:text="左中"
-                            app:select_position_state="@{viewModel.position}" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
-                        android:orientation="horizontal"
-                        android:weightSum="4">
-
-                        <TextView
-                            android:layout_width="70dp"
-                            android:layout_height="30dp"
-                            android:gravity="center"
-                            android:onClick="buttonSelect"
-                            android:tag="4"
-                            android:text="左下"
-                            app:select_position_state="@{viewModel.position}" />
-
-                        <TextView
-                            android:layout_width="70dp"
-                            android:layout_height="30dp"
-                            android:layout_marginLeft="16dp"
-                            android:layout_marginRight="16dp"
-                            android:gravity="center"
-                            android:onClick="buttonSelect"
-                            android:tag="5"
-                            android:text="右上"
-                            app:select_position_state="@{viewModel.position}" />
-
-                        <TextView
-                            android:layout_width="70dp"
-                            android:layout_height="30dp"
-                            android:layout_marginLeft="16dp"
-                            android:layout_marginRight="16dp"
-                            android:gravity="center"
-                            android:onClick="buttonSelect"
-                            android:tag="6"
-                            android:text="右中"
-                            app:select_position_state="@{viewModel.position}" />
-
-                        <TextView
-                            android:layout_width="70dp"
-                            android:layout_height="30dp"
-                            android:gravity="center"
-                            android:onClick="buttonSelect"
-                            android:tag="7"
-                            android:text="右下"
-                            app:select_position_state="@{viewModel.position}" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
-                        android:layout_marginBottom="45dp"
-                        android:orientation="horizontal"
-                        android:weightSum="4">
-
-                        <TextView
-                            android:layout_width="70dp"
-                            android:layout_height="30dp"
-                            android:gravity="center"
-                            android:onClick="buttonSelect"
-                            android:tag="8"
-                            android:text="后上"
-                            app:select_position_state="@{viewModel.position}" />
-
-                        <TextView
-                            android:layout_width="70dp"
-                            android:layout_height="30dp"
-                            android:layout_marginLeft="16dp"
-                            android:layout_marginRight="16dp"
-                            android:gravity="center"
-                            android:onClick="buttonSelect"
-                            android:tag="9"
-                            android:text="后中"
-                            app:select_position_state="@{viewModel.position}" />
-
-                        <TextView
-                            android:layout_width="70dp"
-                            android:layout_height="30dp"
-                            android:layout_marginLeft="16dp"
-                            android:layout_marginRight="16dp"
-                            android:gravity="center"
-                            android:onClick="buttonSelect"
-                            android:tag="10"
-                            android:text="后下"
-                            app:select_position_state="@{viewModel.position}" />
-
-                    </LinearLayout>
+                        android:scrollbars="none" />
 
                 </LinearLayout>
 
