--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -47,7 +47,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@{viewModel.checkType}"
+                        android:text="@{viewModel.checkTypeName}"
                         android:textColor="#ffeab602"
                         android:textSize="15sp" />
 
