--- a/app/src/main/res/layout/activity_data_filter.xml
+++ b/app/src/main/res/layout/activity_data_filter.xml
@@ -22,7 +22,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorCommonGreyBg">
+            android:background="@color/colorCommonGreyBg"
+            app:toast="@{viewModel.toastStr}">
 
             <LinearLayout
                 android:layout_width="match_parent"
