--- a/app/src/main/res/layout/activity_device_list.xml
+++ b/app/src/main/res/layout/activity_device_list.xml
@@ -25,6 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="44dp"
             android:background="@color/colorWhite"
+            app:toast="@{viewModel.toastStr}"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
