--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -85,6 +85,54 @@
                             tools:text="开关柜超声波局放检测" />
 
                     </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:visibility="@{viewModel.showPositionView?View.GONE:View.VISIBLE}">
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1px"
+                            android:background="@color/gray_divide"
+                            android:visibility="visible" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="44dp"
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal"
+                            android:visibility="visible">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="15dp"
+                                android:text="TEV背景值"
+                                android:textColor="@color/text_title"
+                                android:textSize="15sp" />
+
+                            <EditText
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_marginLeft="10dp"
+                                android:layout_weight="1"
+                                android:afterTextChanged="@{viewModel.textChange}"
+                                android:background="@null"
+                                android:gravity="right|center_vertical"
+                                android:hint="请输入"
+                                android:inputType="numberSigned|numberDecimal"
+                                android:paddingRight="15dp"
+                                android:text="@={viewModel.inputType3Value}"
+                                android:textColor="@color/text_content"
+                                android:textColorHint="@color/color_input_hint"
+                                android:textSize="14sp" />
+
+                        </LinearLayout>
+                    </LinearLayout>
+
+
                 </LinearLayout>
 
                 <androidx.recyclerview.widget.RecyclerView
