--- a/app/src/main/res/layout/item_input_type_3.xml
+++ b/app/src/main/res/layout/item_input_type_3.xml
@@ -86,12 +86,14 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1px"
+            android:visibility="gone"
             android:background="@color/gray_divide" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="44dp"
             android:gravity="center_vertical"
+            android:visibility="gone"
             android:orientation="horizontal">
 
             <TextView
