--- a/app/src/main/res/layout/item_type_child_3.xml
+++ b/app/src/main/res/layout/item_type_child_3.xml
@@ -24,6 +24,18 @@
         android:layout_marginTop="10dp"
         android:background="@color/color_divide" />
 
+    <TextView
+        android:id="@+id/text_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="10dp"
+        android:drawablePadding="2dp"
+        android:text="xxx"
+        android:textColor="@color/text_content"
+        android:textSize="14sp" />
+
+
     <LinearLayout
         android:id="@+id/layout"
         android:layout_width="match_parent"
